objects/nSBA__Contact_Former_Name__c.object
<CustomObject>
    <description>Contact Former Name captures a history of aliases and formerly known for an individual</description>
    <fields>
        <fullName>nSBA__Contact__c</fullName>
        <description>Contact related to previous name</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Former Names</relationshipLabel>
        <relationshipName>Contact_Former_Names</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nSBA__First_Name__c</fullName>
        <description>First Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Last_Name__c</fullName>
        <description>Last Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Middle_Name__c</fullName>
        <description>Middle Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Name_Used_From__c</fullName>
        <description>Date Name was Used from</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name Used From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nSBA__Name_Used_To__c</fullName>
        <description>Date Name was Used until</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name Used To</label>
        <type>Date</type>
    </fields>
    <label>Contact Former Name</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Former Name Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Former Names</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>